--- a/html/login.html
+++ b/html/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible"  content="width-device-width, initial-scale=1.0">
     <title> LOGIN HM</title>
-    <link rel ="stylesheet" href = "style.css">
+    <link rel ="stylesheet" href = "../css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel="stylesheet"> 
 </head>
 
