--- a/html/forgotpw_VERIFY.html
+++ b/html/forgotpw_VERIFY.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible"  content="width-device-width, initial-scale=1.0">
     <title> FORGOT PASSWORD HM</title>
-    <link rel ="stylesheet" href = "../css/style_fpw.css">
+
+    <link rel ="stylesheet" href = "../css/style_fpw_VERIFY.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel="stylesheet"> 
 </head>
 
@@ -14,18 +15,13 @@
         <form action = "">
             <h2>FORGOT PASSWORD</h2>
             <br>
-
+            
             <H3>Enter your email</H3>
             <div class = "input-box">
                 <input type="text" placeholder="Email" required>
                 <i class='bx bx-envelope'></i>
             </div>
-            <div class = "remember-forgot">
-                <label><input type = "checkbox" >Remember me
-                </label>
             
-            </div>
-
             <button type="submit" class="btn"> <p>VERIFY</p></button>
 
             <div class="register-link">
