--- a/html/forgotpw_VERIFY.html
+++ b/html/forgotpw_VERIFY.html
@@ -21,7 +21,7 @@
                 <i class='bx bx-envelope'></i>
             </div>
             <div class = "remember-forgot">
-                <label><input type = "checkbox" >Remember me
+                <label><input type = "checkbox" >  I agree to terms & conditions
                 </label>
             
             </div>
