--- a/html/Room info.html
+++ b/html/Room info.html
@@ -18,13 +18,13 @@
 
         <div class="mainbody">
             <ul class="vertical-list">
-                <li><div class="list-item" onclick="loadContent(1)">Room info</div></li>
-                <li><div class="list-item" onclick="loadContent(2)">Room search</div></li>
-                <li><div class="list-item" onclick="loadContent(3)">Rent room form</div></li>
+                <li><div class="list-item" onclick="loadContent(1)">Item 1</div></li>
+                <li><div class="list-item" onclick="loadContent(2)">Item 2</div></li>
+                <li><div class="list-item" onclick="loadContent(3)">Item 3</div></li>
 
-                <li><div class="list-item" onclick="loadContent(4)">Report</div></li>
-                <li><div class="list-item" onclick="loadContent(5)">Checkout</div></li>
-                <li><div class="list-item" onclick="loadContent(6)">Adjustment</div></li>
+                <li><div class="list-item" onclick="loadContent(4)">Item 4</div></li>
+                <li><div class="list-item" onclick="loadContent(5)">Item 5</div></li>
+                <li><div class="list-item" onclick="loadContent(6)">Item 6</div></li>
                 <!-- Add more list items as needed -->
             </ul>
 
@@ -38,8 +38,8 @@
             function loadContent(index) {
 
                 const filenames = [
-                "search_page.html",
-                "search_page.html",
+                "verify.html",
+                "login.html",
                 "sign_up_phuc.html",
                 "content4.html",
                 "content5.html",
