--- a/html/Homepage.html
+++ b/html/Homepage.html
@@ -39,7 +39,7 @@
             function loadContent(index) {
 
                 const filenames = [
-                "search_page.html",
+                "roominfo.html",
                 "search_page.html",
                 "sign_up_phuc.html",
                 "content4.html",
